home page from spacing issue fixed

--- a/docroot/sites/all/themes/ambitious/sass/forms.scss
+++ b/docroot/sites/all/themes/ambitious/sass/forms.scss
@@ -169,7 +169,7 @@
       } 
     }
   }
-  .webform-component--other-ways-to-help{
+  div.form-item.webform-component--other-ways-to-help{
     width: 30%;
     float: right; 
   }
