--- a/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
@@ -1806,7 +1806,7 @@ fieldset{
     input[type="email"], input[type="text"], .select {
       float:left;
       clear:both;
-      width:80%;
+      width:87%;
       @include border-radius(5px);
       border-color:#e4e4e4;
       @include box-shadow(inset 1px 1px 2px rgba(112, 112, 112, 1));
